--- a/css/style.css
+++ b/css/style.css
@@ -106,19 +106,31 @@ footer {
     cursor: pointer;
 }
 
+.video {
+    display: flex;
+}
+
+.main_video--contenedor{
+    width: 80%;
+    height: 22.5rem;
+    padding: 2rem;
+}
+
+
 .main__video {
     align-items: left;
-    display: inline-block;
-    padding: 1.5rem;
+    width: 100%;
+    height: 100%;
+    
 }
 
 .main__videodescription {
-    display: inline-block;
-    height: 1rem;
+    height: 22rem;
     width: 25rem;
     text-align: left;
     padding: 1.5rem;
     vertical-align: 7rem;
+    overflow: hidden;
 }
 
 h4 {
@@ -185,3 +197,51 @@ a {
     background-color: rgb(207, 135, 76) ;
     border-radius: 2rem;
 }
+
+
+@media only screen and (max-width: 1210px){
+    main{
+        background-color: aqua;
+    }
+    .main_video--contenedor{
+        width: 90%;
+        padding: 0%;
+        padding-left: 1rem;
+        padding-top: 1.5rem;
+        min-width: 27rem;
+        min-height: 19rem;
+    }
+    h4{
+        font-size: 1.1rem;        
+    }
+    .page__title{
+        top: 29%;
+        left: 6%;  
+    }
+    h1{
+        font-size: 4.3rem;
+    }
+    .page__subtitle{
+        top: 80%;
+        right: 10%;
+        padding: 1rem;
+    }
+    h2 {
+        font-size: 1.3rem;
+    }
+    .main__btn {
+        top: 65%;
+        left: 38%;
+    }
+    
+}
+
+
+
+
+@media only screen and (max-width: 540px){
+    main {
+        background-color: blueviolet;
+    }
+}
+
