--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,31 @@ a {
 }
 
 
+/* -------------- pag CONTACTANOS ----------------------- */
+
+.main__contactanos--foto{
+    padding: 0%;
+    width: 95%;
+    height: 25rem;
+    margin: 0px auto;
+    display: block;
+    filter: blur(1px) grayscale(45%);    
+}
+
+.main__contactanos--titulo{
+    text-align: center;
+    position: absolute;
+    top: 70%;
+    left: 5%;
+    text-shadow: 5px 5px 2px black;
+}  
+
+.main__contactanos--titulo--hijo{
+    font-family:'Square Peg';
+    font-size: 5rem;
+    color: rgb(255, 165, 55);
+}
+
 
 
 
