--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import "variables";
-
-
+@import "foot&head";
 
 
 
@@ -12,40 +11,10 @@
     box-sizing: border-box;
 }
 
-.botonesfooter{ /* Grid item */
-    text-align: right; 
-}
 
-.footer__escrito{ /* Grid container */  
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 3fr;
-    gap: 2.5rem;
-    width: 100%;
-    align-content: center;
-}
 
-.footer__disclaimer{ /* Grid item */
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1rem;
-    color: rgba(19, 19, 19, 0.788);
-    padding-left: 25%;
-}
-
-.footer__logo{
-    display: inline-block;
-}
-
-.footer__logo--hijo{
-    height: 3.8rem;
-    margin-top: 0.3rem;
-    margin-left: 0.2rem;
-}
-
-.page__foto{
-    filter: blur(3px);
-/*     mask-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), url('../recursos/index.jpg') linear-gradient(black, transparent); intento agregar un gradiente desde abajo hacia arriba */
-    padding: 0%;
-    width: 100%;    
+main {
+    background-color: black;
 }
 
 h1 {font-family:'Square Peg';
@@ -58,7 +27,20 @@ h2 {
     font-size: 1.5rem;
 }
 
-.page__title{
+h4 {
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.2rem;
+}
+
+.page{
+    &__foto{
+    filter: blur(3px);
+    padding: 0%;
+    width: 100%;    
+}
+
+    &__title{
     text-align: center;
     position: absolute;
     top: 40%;
@@ -66,7 +48,7 @@ h2 {
     right: 0%;
 }
 
-.page__subtitle{
+    &__subtitle{
     text-align: center;
     position: absolute;
     top: 68%;
@@ -76,22 +58,6 @@ h2 {
     text-shadow: 3px 3px 2px black;
     text-shadow: 3px 3px 2px black;
 }
-
-main {
-    background-color: black;
-}
-
-header {    
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-}
-
-footer {
-    display: flex;
-    overflow: hidden;
-    width: 100%;
-    height: 4rem;
-    background:linear-gradient(black 0%, rgb(207, 135, 76) 10%);
 }
 
 .main__btn {
@@ -140,84 +106,6 @@ footer {
     align-self: center;
 }
 
-h4 {
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.2rem;
-}
-
-.header__index{
-    display: flex;
-}
-
-.header__nav{
-    display: flex;
-    justify-content: space-between;
-    width: 85%;
-    margin: auto;
-}
-
-
-.header__loginbtn{
-    display:inline-block ;    
-    padding: 0.5rem;
-    margin: 0.7rem;
-    justify-content: center;
-    position: absolute;
-    background-color: rgb(207, 135, 76) ;
-    border-radius: 40px;
-}
-
-.header__loginbtn:hover{
-    background-color: rgb(190, 118, 58);
-    cursor: pointer;
-}
-    
-
-.header__buscador{
-    display:inline-block ;
-    padding: 0.5rem;
-    color: white;
-    padding-left: 9rem;
-    padding-top: 1.25rem;
-
-} 
-
-.header__navegador{
-    padding: 1rem 0.1rem;
-    display: flex;
-}
-
-.header__boton_desplegable{
-    background-color: rgb(190, 118, 58);
-    border: none;
-    font-size: 1rem;
-    padding:15px;
-    height: 2.5rem;
-    border-radius: 20px;
-    line-height: 1rem;
-    margin-top: 0.5rem;
-    margin-right: 0.5rem;
-    cursor: pointer;
-    display: none;
-}
-
-a {
-    outline: none;
-    text-decoration: none;
-    color: #fff;
-}
-
-.botonesheader 
-    {display: inline-block;
-    padding: 0.5rem 2rem;
-    text-shadow: 2px 2px 1px black;
-    }
-
-.botonesheader:hover {
-    background-color: rgb(207, 135, 76) ;
-    border-radius: 2rem;
-}
 
 
 /* -------------- pag LOGIN ----------------------- */
@@ -322,7 +210,7 @@ a {
 
 .main__formulario--contenedor{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
 }
 
 .form__btn{  
@@ -352,292 +240,5 @@ a {
 
 
 
-@media only screen and (max-width: 1210px){
-    
-    .main_video--contenedor{
-        width: 90%;
-        padding: 0%;
-        padding-left: 1rem;
-        padding-top: 1.5rem;
-        min-width: 27rem;
-        min-height: 19rem;
-    }
-    h4{
-        font-size: 1.1rem;        
-    }
-    .page__title{
-        top: 29%;
-        left: 0%;  
-        right: 0%;
-    }
-    h1{
-        font-size: 4.3rem;
-    }
-    .page__subtitle{
-        top: 69%;
-        left: 0%;  
-        right: 0%;
-        padding: 0.5rem;
-    }
-    h2 {
-        font-size: 1.3rem;
-    }
-    .main__btn {
-        top: 55%;
-        left: 0%;  
-        right: 0%;
-    }
-
-    .botonesheader{
-        display: inline-block;
-        padding: 0.5rem 1rem;
-    }
-
-    .footer__escrito{
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-
-}
-
-@media only screen and (max-width: 840px){
-    main{
-        background-color: black;
-    }
-    h4{
-        font-size: 1.1rem;        
-    }
-    .main_video--contenedor{
-        min-width: 18rem;
-        min-height: 9.2rem;
-        
-    }
-    h2 {
-        font-size: 1.1rem;
-    }
-
-    .page__subtitle{
-        top: 75%;
-        right: 0%;
-        left: 0%;
-    }
-
-    .page__title{
-        top: 20%;
-    }
-
-    h1{
-        font-size: 4rem;
-    }
-
-.header__boton_desplegable{
-    display: block;
-}
-
-.header__navegador{
-    position: absolute;
-    background-color: rgba(105, 105, 105, 0.708);
-    flex-direction: column;
-    z-index: 100;
-    align-items: center;
-    width: 10rem;
-    right: 0%;
-    top: 5rem;
-    height: 50%;
-    justify-content: space-around;
-    display: none;
-    
-}
-
-.header__navegador--visible{
-    display: flex;
-
-}
-
-/* -------------- pag LOGIN ----------------------- */
-
-.main_input{
-    font-family: Karla;
-    background-clip: padding-box;
-    width: 100%;
-    padding: 0.4rem 0.6rem;
-    border-radius: 5px;
-    margin-bottom: 2.5rem;
-}
-
-.form__login{
-    margin: auto;
-    padding: 5rem 5rem;
-    padding-top: 4rem;
-    width: 100%;
-    height: 100%;
-}
-
-}
-
-
-
-
-
-
-@media only screen and (max-width: 540px){
-    *{
-        font-size: 14px ;
-    }
-
-
-/* ----------------  H E A D E R  ------------------------------------- */
-
-    header {
-        top: 0;
-        position: fixed;
-        height: 5rem;
-        z-index: 100;
-    }
-    
-    .header__index{
-        height: 5px;
-    }
-
-    .header__nav{
-        flex-direction: column;
-        margin: 0%;
-        display: flex;
-    }
-
-    .header__logo--celu {
-        height: 4.5rem;
-        margin-top: .5rem;
-    }
-
-    .header__loginbtn{
-        display: flex;
-        align-items: center;
-        margin-top: 1.3rem;
-        margin-right: 0;
-        margin-left: 2rem;
-    }
-
-    .header__buscador{
-        margin-left: 4rem;
-        width: max-content;
-        line-height: 2.5rem;
-    }
-
-    .header__buscador--input{
-        width: fit-content;
-    }    
-
-    .header__boton_desplegable{
-        display: flex;
-        align-items: center;
-        width: 2rem;
-        justify-content: center;
-        border: solid rgba(136, 80, 35, 0.678);
-        margin-left: 8rem;
-        margin-top: -rem;
-    }
-
-    .header__navegador{
-        left: 0%;
-        display: none;
-        height: fit-content;
-        flex-direction: row;
-        width: 100%;
-    }
-
-    .header__navegador--visible{
-        display: flex;
-    }
-
-    
-
-/* ----------------------------- B O D Y -------------------------------- */
-
-main {
-    margin-top: 5rem;
-    padding-top: .3rem;
-    width: 100%;
-    height: fit-content;
-}
-
-.page__foto{
-    width: 73.3%;
-    z-index: 40;
-}
-
-.page__title{
-    top: 12%;
-    right: 25%;
-    left: -2%;
-    z-index: 50;
-}
-
-h1{
-    font-size: 2.5rem;
-}
-
-.page__subtitle{
-    top: 25%;
-    right: 25%;
-    left: -2%;
-    z-index: 50;
-}
-
-h2{
-    font-size: 0.9rem;
-}
-
-.main__btn {
-    position: absolute;
-    top: 40%;
-    left: 18%;
-    z-index: 50;
-}
-
-.quieroinscribirme{
-    display: flex;
-    height: 2rem;
-    justify-content: center;
-    align-items: center;
-    z-index: 50;
-}
-
-.video{
-    display: block;
-}
-
-.main__video{
-    width: 20.5rem;
-}
-
-.main__videodescription{
-    width: 20.2rem;
-    height:fit-content;
-}
-
-
-
-/* ------------------------ F O O T E R ------------------------------------------ */
-
-footer{
-    display: inline-block;
-}
-
-.footer__escrito{ /* Grid container */  
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 100%;
-}
-
-.footer__disclaimer--padre{
-    grid-column: 1/4;
-}
-
-
-
-
-
-}
 
 
