--- a/scss/_mediaquerrys.scss
+++ b/scss/_mediaquerrys.scss
@@ -97,7 +97,7 @@
     align-items: center;
     width: 10rem;
     right: 0%;
-    top: 5rem;
+    top: 5.2rem;
     height: 50%;
     justify-content: space-around;
     display: none;
@@ -111,23 +111,22 @@
 
 /* -------------- pag LOGIN ----------------------- */
 
+
 .main_input{
-    font-family: Karla;
-    background-clip: padding-box;
-    width: 100%;
-    padding: 0.4rem 0.6rem;
-    border-radius: 5px;
-    margin-bottom: 2.5rem;
+    width: auto !important;
 }
 
 .form__login{
-    margin: auto;
-    padding: 5rem 5rem;
-    padding-top: 4rem;
-    width: 100%;
-    height: 100%;
+    padding: auto !important;
 }
 
+}
+
+
+/* -------------- pag CONTACTANOS ----------------------- */
+
+.main__logo--formulario{
+    display: none;
 }
 
 
