--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,7 +124,7 @@ h4 {
 .main_input{
     font-family: Karla;
     background-clip: padding-box;
-    width: 100%;
+    width: 30rem;
     padding: 1rem 0.8rem;
     border-radius: 5px;
     margin-top: 0.5rem;
