termino pag de eventos no es responsive aun

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,9 @@ a {
   margin: 0;
   box-sizing: border-box; }
 
+body {
+  background-color: black; }
+
 main {
   background-color: black; }
 
@@ -320,7 +323,7 @@ h4 {
   left: 4%;
   text-shadow: 5px 5px 2px black; }
 
-.main__contactanos--titulo--hijo {
+.main__contactanos--titulo--hijo, .showcase__cards h5 {
   font-family: 'Square Peg';
   font-size: 5rem;
   color: #ffa537; }
@@ -372,3 +375,50 @@ h4 {
 
 .contactanos__mapa {
   width: 100%; }
+
+/* -------------- pag EVENTOS ----------------------- */
+.showcase {
+  width: 100%;
+  height: 18rem;
+  background: url(../recursos/eventos.gif) no-repeat center center/cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.5rem; }
+  .showcase__title {
+    font-size: 4rem !important;
+    padding-bottom: 2rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem; }
+  .showcase__subtitle, .showcase__cards p {
+    color: aliceblue;
+    text-shadow: 3px 3px 2px black;
+    padding-left: 2rem;
+    padding-right: 2rem; }
+  .showcase__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    margin: 0.3rem 1rem;
+    margin-bottom: 3rem; }
+  .showcase__cards--individuales {
+    background-color: #121d24;
+    padding: 0 0.4rem;
+    border-radius: 10px; }
+  .showcase__cards img {
+    width: 100%;
+    height: 19rem; }
+  .showcase__cards h5 {
+    font-size: 1.8rem;
+    padding-bottom: 0.5rem; }
+  .showcase__cards p {
+    padding: 0;
+    padding-bottom: 1rem;
+    padding-top: 0.3rem;
+    font-weight: 500; }
+  .showcase__cards a {
+    font-weight: 500;
+    padding: 1rem 0; }
+  .showcase__cards i {
+    font-size: 0.7rem; }
