--- a/scss/style.scss
+++ b/scss/style.scss
@@ -316,4 +316,96 @@ h4 {
 }
 
 
+/* -------------- pag CAPACITACION ----------------------- */
+
+.showcase__capacitacion{
+    width: 100%;
+    height: 18rem;
+    background: url(../recursos/capacitacion.jpg) no-repeat center center/cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+
+.showcase__capacitacion h1 {
+    @extend .showcase__title ;
+}
+
+.showcase__capacitacion p {
+    @extend .showcase__subtitle ;
+    padding-top: 5rem;
+    font-weight: 500;
+    font-size: 1.2rem;
+    color: cornsilk;
+}
+
+.banner{
+    background: rgb(18, 29, 36);
+    display:flex;
+    flex-direction: column;
+    width: 97%;
+    margin-left: 1rem;
+    margin-bottom: 2rem;
+    height: 15rem;
+    border-radius: 10px;
+    border-style: dashed double;
+    border-color: antiquewhite;
+    border-width: 0.2rem;
+
+    &__titulo h2 {
+    color: rgb(190, 118, 58);
+    font-family:'Square Peg';
+    font-size: 3.5rem;
+    font-weight: 550;
+    }
+
+    &__titulo {
+    align-self: center;
+    }   
+
+    &contenido--padre{
+        display: flex;
+        flex-direction: row;
+    }
+
+    &__contenido{
+        display: flex;
+        flex-direction: column;
+        background-color: aquamarine;
+    }
+
+}
+
+.banner2{
+    float: right;
+}
+
+.cards__capacitacion{
+    @extend .showcase__cards ;
+    grid-template-columns: 1fr 1fr;
+}
+
+.cards__capacitacion--individuales{
+    @extend .showcase__cards--individuales ;
+}
+
+.cards__capacitacion--individuales h3{
+    @extend .main__contactanos--titulo--hijo ;
+    font-size: 1.8rem;
+    padding-bottom: 0.5rem;
+    font-weight: 500;
+}
+
+.cards__capacitacion--individuales h6{
+    @extend .showcase__subtitle ;
+    padding: 0;
+    padding-bottom: 1rem;
+    padding-top: 0.3rem;
+    font-weight: 500;
+}
+
+
+
 
