--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ h4 {
   left: 4%;
   text-shadow: 5px 5px 2px black; }
 
-.main__contactanos--titulo--hijo, .showcase__cards h5, .cards__capacitacion h5, .cards__capacitacion--individuales h3 {
+.main__contactanos--titulo--hijo, .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label, .cards__capacitacion--individuales h3 {
   font-family: 'Square Peg';
   font-size: 5rem;
   color: #ffa537; }
@@ -409,7 +409,7 @@ h4 {
   .showcase__cards img, .cards__capacitacion img {
     width: 100%;
     height: 19rem; }
-  .showcase__cards h5, .cards__capacitacion h5 {
+  .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label {
     font-size: 1.8rem;
     padding-bottom: 0.5rem; }
   .showcase__cards p, .cards__capacitacion p {
@@ -459,16 +459,38 @@ h4 {
     font-weight: 550; }
   .banner__titulo {
     align-self: center; }
-  .bannercontenido--padre {
-    display: flex;
-    flex-direction: row; }
+  .banner__contenido--padre {
+    padding: 0 2rem;
+    padding-top: 1rem; }
   .banner__contenido {
     display: flex;
     flex-direction: column;
-    background-color: aquamarine; }
+    color: #fff; }
 
-.banner2 {
-  float: right; }
+.banner section {
+  display: flex;
+  justify-content: space-between; }
+
+.banner h5, .banner .banner__contenido--inputs input label, .banner__contenido--inputs input .banner label {
+  text-shadow: 3px 3px 2px black;
+  font-weight: 500;
+  font-size: 1.2rem;
+  color: cornsilk; }
+
+.banner__contenido--inputs {
+  display: flex;
+  justify-content: center; }
+
+.banner__contenido--inputs label {
+  text-shadow: 3px 3px 2px black;
+  font-weight: 500;
+  font-size: 1.2rem;
+  color: cornsilk;
+  margin-top: 0.5rem; }
+
+.banner__contenido--inputs input {
+  margin-top: 1rem;
+  margin-right: 0.2rem; }
 
 .cards__capacitacion {
   grid-template-columns: 1fr 1fr; }
