--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ main {
     background-color: black;
 }
 
-h1 {font-family:'Square Peg';
+h1 {font-family:$tituloprincipal;
     font-size: 5rem;
     color: aliceblue;
     text-shadow: 5px 5px 2px black;
@@ -77,7 +77,7 @@ h4 {
 }
 
 .quieroinscribirme:hover {
-    background-color: rgb(207, 135, 76);
+    background-color: $naranjabase;
     box-shadow: 0px 0px 10px rgba(249, 255, 195, 0.959), 0px 0px 10px rgb(253, 252, 198);
     cursor: pointer;
 }
@@ -112,7 +112,7 @@ h4 {
 /* -------------- pag LOGIN ----------------------- */
 
 .main__login{
-    background-color: rgb(18, 29, 36);
+    background-color: $fondoalternativo;
 }
 
 .form__login{
@@ -143,7 +143,7 @@ h4 {
     padding: 0.5rem;
     margin: 0.7rem;
     justify-content: center;
-    background-color: rgb(207, 135, 76) ;
+    background-color: $naranjabase ;
     border-radius: 40px;
 }
 
@@ -264,7 +264,7 @@ h4 {
     }
 
     &__subtitle{
-        color: aliceblue;
+        color: $colortitulosecundarios;
         text-shadow: 3px 3px 2px black;
         padding-left: 2rem;
         padding-right: 2rem;
@@ -280,7 +280,7 @@ h4 {
     }
 
     &__cards--individuales{
-        background-color: rgb(18, 29, 36) ;
+        background-color: $fondoalternativo ;
         padding: 0 0.4rem;
         border-radius: 10px;
     }
@@ -338,11 +338,11 @@ h4 {
     padding-top: 5rem;
     font-weight: 500;
     font-size: 1.2rem;
-    color: cornsilk;
+    color: $colortitulosecundarios;
 }
 
 .banner{
-    background: rgb(18, 29, 36);
+    background: $fondoalternativo;
     display:flex;
     flex-direction: column;
     width: 97%;
@@ -387,7 +387,7 @@ h4 {
     text-shadow: 3px 3px 2px black;
     font-weight: 500;
     font-size: 1.2rem;
-    color: cornsilk;
+    color: $colortitulosecundarios;
 }
 
 .banner__contenido--inputs{
@@ -404,7 +404,7 @@ h4 {
     text-shadow: 3px 3px 2px black;
     font-weight: 500;
     font-size: 1.2rem;
-    color: cornsilk;
+    color: $colortitulosecundarios;
     margin-top: 0.5rem;
 }
 
