--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,11 +35,16 @@ h4 {
     font-size: 1.2rem;
 }
 
+.menu__checkbox--input{
+    display: none;
+}
+
 .page{
     &__foto{
     filter: blur(3px);
     padding: 0%;
-    width: 100%; 
+    width: 100%;
+    position: relative; 
     } 
     &__title{
     text-align: center;
@@ -55,7 +60,7 @@ h4 {
     top: 68%;
     left: 0%;  
     right: 0%;
-    color: aliceblue;
+    color: white;
     text-shadow: 3px 3px 2px black;
     text-shadow: 3px 3px 2px black;
 }
@@ -239,6 +244,10 @@ h4 {
     width: 100%;
 }
 
+.logo__formulario{
+    display: flex;
+    max-height: 30rem;
+}
 
 
 
