--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,6 +118,8 @@ h4 {
 
 .main__login{
     background-color: $fondoalternativo;
+    flex-wrap: wrap;
+    height: 75vh;
 }
 
 .form__login{
@@ -125,6 +127,9 @@ h4 {
     padding: 5rem 18rem;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .main_input{
